--- a/views/ch-5.ejs
+++ b/views/ch-5.ejs
@@ -15,6 +15,7 @@
         });
 
         playerHitEnergy(function(object) {
+          playSound('energy');          
           energy += object.energy;
           removeObject(object);
         });
